se ajusta data y tiempos de esperas

--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -1,9 +1,9 @@
 webdriver {
-  wait.for.timeout = 20000
+  wait.for.timeout = 25000
   driver=chrome
   timeouts {
-    implicitlywait = 18000
-   fluentwait = 15000
+    implicitlywait = 20000
+ //  fluentwait = 18000
 
   }
 }
