--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,17 @@ buildscript {
         }
     }
     dependencies {
+        classpath "io.freefair.gradle:lombok-plugin:6.2.0"
+        //classpath "io.freefair.gradle:lombok-plugin:5.0.0-rc6"
         classpath "net.serenity-bdd:serenity-gradle-plugin:1.9.4"
         classpath "gradle.plugin.com.github.sherter.google-java-format:google-java-format-gradle-plugin:0.8"
         classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.6.2"
     }
 }
+
+//plugins {
+ //id "io.freefair.lombok" version "6.2.0"
+//}
 
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
@@ -21,6 +27,7 @@ tasks.withType(Test) {
 
 apply plugin: 'java'
 apply plugin: 'idea'
+//apply plugin: "io.freefair.lombok"
 apply plugin: 'net.serenity-bdd.aggregator'
 apply plugin: 'org.sonarqube'
 apply plugin: 'com.github.sherter.google-java-format'
@@ -79,11 +86,13 @@ ext{
     hamcrestVersion='1.3'
     mockitoVersion='1.10.19'
     apacheVersion='3.11'
+    serenityCoreVersion='2.2.0'
 
 
 }
 
 dependencies {
+
     compile         "com.sura.bdd:services-conector:$rootProject.ext.servicesConectorVersion"
     compile         "net.serenity-bdd:serenity-core:$rootProject.ext.serenityVersion"
     compile         "net.serenity-bdd:serenity-cucumber:$rootProject.ext.serenityCucumberVersion"
@@ -95,6 +104,14 @@ dependencies {
     testCompile  "junit:junit:$rootProject.ext.junitVersion"
     testCompile  "org.hamcrest:hamcrest-all:$rootProject.ext.hamcrestVersion"
     unitTestCompile  "org.mockito:mockito-all:$rootProject.ext.mockitoVersion"
+    //implementation group: 'net.serenity-bdd', name: 'serenity-screenplay-rest', version: '1.9.28'
+    implementation group: 'net.serenity-bdd', name: 'serenity-screenplay-rest', version: '1.9.45'
+// https://mvnrepository.com/artifact/org.projectlombok/lombok
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
+    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
+
+
 }
 
 sonarqube {
