se termina modelo de consumo de servicio

--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -14,3 +14,9 @@ drivers {
     webdriver.chrome.driver = src/test/resources/webdriver/linux/chromedriver
   }
 }
+
+environments {
+  default {
+    restapi.baseurl = "http://appslab.suranet.com/apisoatexpedicion/api"
+  }
+}
